--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -623,7 +623,7 @@
                             <div class="actions">
                                 <div class="btn-group">
                                     <button type="button" class=" btn btn-sm red input-rounded " style="color:#ffffea"
-                                            ng-click="editAction('education')">
+                                            ng-click="editProfession('education')">
                                         EDIT
                                     </button>
 
@@ -637,28 +637,16 @@
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight "> Education</label>
 
-                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
-                                        <option>Select</option>
-                                        <option value="170">5Ft 11In / 178 cm</option>
-                                        <option value="171">6Ft 0In / 180 cm</option>
-                                        <option value="172">5ft 0In / 150 cm</option>
-
+                                    <select class="form-control input-rounded " ng-model="setProfession.education"
+                                            ng-options="item.education for item in educationList track by item.id_education">
                                     </select>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight  "> Educational in detail</label>
 
-                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
-                                        <option>Select</option>
-                                        <option value="50">50Kg 115 Lbs</option>
-                                        <option value="60">60Kg /135 Lbs</option>
-                                        <option value="70">70Kg / 155 Lbs</option>
-                                        <option value="75">75Kg / 175 Lbs</option>
-                                        <option value="80">80Kg / 175 Lbs</option>
+                                    <input type="text"  class="form-control  input-rounded"  ng-model="profile.login_user.education_detail">
 
-
-                                    </select>
                                 </div>
 
                             </div>
@@ -667,27 +655,16 @@
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight "> Occupation</label>
 
-                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
-                                        <option>Select</option>
-                                        <option value="170">5Ft 11In / 178 cm</option>
-                                        <option value="171">6Ft 0In / 180 cm</option>
-                                        <option value="172">5ft 0In / 150 cm</option>
-
+                                    <select class="form-control input-rounded " ng-model="setProfession.occupation"
+                                            ng-options="item.occupation for item in occupation track by item.id_occupation">
                                     </select>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight  "> Employed in</label>
 
-                                    <select class="form-control input-rounded " ng-model="profile.login_user.weight">
-                                        <option>Select</option>
-                                        <option value="50">50Kg 115 Lbs</option>
-                                        <option value="60">60Kg /135 Lbs</option>
-                                        <option value="70">70Kg / 155 Lbs</option>
-                                        <option value="75">75Kg / 175 Lbs</option>
-                                        <option value="80">80Kg / 175 Lbs</option>
-
-
+                                    <select class="form-control input-rounded " ng-model="setProfession.occupation_cat"
+                                            ng-options="item.occupation_category for item in occupationCategoryList track by item.id_occupation_category">
                                     </select>
                                 </div>
 
@@ -698,17 +675,25 @@
                                 <div class="col-md-6">
                                     <label class=" uppercase font-weight "> Annaul Income</label>
 
-                                    <select class="form-control input-rounded " ng-model="profile.login_user.height">
-                                        <option>Select</option>
-                                        <option value="170">5Ft 11In / 178 cm</option>
-                                        <option value="171">6Ft 0In / 180 cm</option>
-                                        <option value="172">5ft 0In / 150 cm</option>
+                                    <input type="text"  class="form-control  input-rounded"  ng-model="profile.login_user.income">
 
-                                    </select>
                                 </div>
 
 
                             </div>
+                                 <hr/>
+                                <div class="actions" style="text-align: right" >
+                                    <button type="button" ng-click="editAction('education')"
+                                            class=" btn btn-default input-rounded " >
+                                        Cancel
+                                    </button>
+                                    &nbsp;
+                                    <button type="button" ng-click="saveProfession()" class=" btn btn-default red input-rounded "
+                                            style="color:#ffffea">
+                                        Save
+                                    </button>
+
+                                </div>
 </span>
                             <span ng-show="education">
 
@@ -717,33 +702,33 @@
                                 <div class="col-md-4">
                                     <label class="font-weight-head "> Education</label>
 
-                                    <p class="details">BE</p>
+                                    <p class="details">{{profile.login_user.education}}</p>
 
                                 </div>
 
                                 <div class="col-md-4">
                                     <label class=" font-weight-head  "> Educational in Detail</label>
 
-                                    <p class="details ">Not available</p>
+                                    <p class="details ">{{profile.login_user.education_detail}}</p>
 
                                 </div>
 
                                 <div class="col-md-4">
                                     <label class=" font-weight-head  "> Occupation</label>
 
-                                    <p class="details ">Web Developer</p>
+                                    <p class="details ">{{profile.login_user.occupation}}</p>
 
                                 </div>
                                 <div class="col-md-4">
                                     <label class=" font-weight-head  "> Employed in</label>
 
-                                    <p class="details ">Not available</p>
+                                    <p class="details ">{{profile.login_user.occupation_category}}</p>
 
                                 </div>
                                 <div class="col-md-4">
                                     <label class=" font-weight-head  "> Annaul Income</label>
 
-                                    <p class="details ">Rs 7,00,000</p>
+                                    <p class="details ">{{profile.login_user.income}}</p>
 
                                 </div>
                             </div>
