profile edit updated

--- a/src/app/main/settings/accountsettings/accountSettings.html
+++ b/src/app/main/settings/accountsettings/accountSettings.html
@@ -29,7 +29,7 @@
                                     <label class=" uppercase  "> Email ID</label>
 
                                     <input type="text" class="form-control input-rounded"
-                                           placeholder="Enter Id"></div>
+                                           placeholder="Enter Id" ng-model="email"></div>
                             </div>
                             <hr>
                             <div class="form-group">
@@ -37,7 +37,7 @@
                                 <div class="col-md-12">
                                     <div class="pull-right">
                                     <button type="button" class=" btn btn-default input-rounded"
-                                            ng-click="">
+                                            ng-click="changeEmail()">
                                         Save
                                     </button>&nbsp;<button type="button" class=" btn red input-rounded"
                                             ng-click="">
