--- a/src/app/main/settings/manageEmail/manageEmail.html
+++ b/src/app/main/settings/manageEmail/manageEmail.html
@@ -27,7 +27,7 @@
 
                                 <div class="col-md-1 margin-top-10">
 
-                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                    <input type="checkbox" icheckbox_flat-red class="icheck " ng-checked="alert.daily_matchwatch == 1" ng-model="alert.daily_matchwatch">
                                 </div>
                                 <div class="col-md-10">
 
@@ -43,7 +43,8 @@
 
                                 <div class="col-md-1 margin-top-10">
 
-                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                    <input type="checkbox" icheckbox_flat-red class="icheck "
+                                           ng-checked="alert.weekly_photomatch == 1" ng-model="alert.weekly_photomatch">
                                 </div>
                                 <div class="col-md-10">
 
@@ -59,7 +60,8 @@
 
                                 <div class="col-md-1 margin-top-10">
 
-                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                    <input type="checkbox" icheckbox_flat-red class="icheck "
+                                           ng-checked="alert.weekly_horoscope == 1" ng-model="alert.weekly_horoscope">
                                 </div>
                                 <div class="col-md-10">
 
@@ -75,7 +77,8 @@
 
                                 <div class="col-md-1 margin-top-10">
 
-                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                    <input type="checkbox" icheckbox_flat-red class="icheck "
+                                           ng-checked="alert.similar_profiles == 1" ng-model="alert.similar_profiles">
                                 </div>
                                 <div class="col-md-10">
 
@@ -92,7 +95,7 @@
 
                                 <div class="col-md-1 margin-top-10">
 
-                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                    <input type="checkbox" icheckbox_flat-red class="icheck " ng-checked="alert.communication == 1" ng-model="alert.communication">
                                 </div>
                                 <div class="col-md-10">
 
@@ -109,7 +112,8 @@
 
                                 <div class="col-md-1 margin-top-10">
 
-                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                    <input type="checkbox" icheckbox_flat-red class="icheck "
+                                           ng-checked="alert.auto_login == 1" ng-model="alert.auto_login">
                                 </div>
                                 <div class="col-md-10">
 
