--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -127,26 +127,20 @@
         </div>
 
 
-        <!--<div class="form-group ">-->
-            <!--<label class=" uppercase font-weight"> Highest Education</label>-->
-            <!--<select class="form-control input-rounded " ng-model="step2.city"-->
-                    <!--ng-click="selectCity(city)">-->
-                <!--<option ng-repeat="obj in educationCategoryList" value="{{obj.id_city}}">{{obj.city_name}}</option>-->
-            <!--</select>-->
-        <!--</div>-->
+        <div class="form-group ">
+            <label class=" uppercase font-weight"> Highest Education</label>
+            <select class="form-control input-rounded " ng-model="setProfession.education"
+                    ng-options="item.education for item in educationList track by item.id_education">
+            </select>
+        </div>
 
 
-        <!--<div class="form-group ">-->
-            <!--<label class=" uppercase font-weight"> Occupation</label>-->
-            <!--<select class="form-control input-rounded">&lt;!&ndash;ng-model="candidate.occupation"&ndash;&gt;-->
-                <!--<option>Select</option>-->
-                <!--<option>Option 1</option>-->
-                <!--<option>Option 2</option>-->
-                <!--<option>Option 3</option>-->
-                <!--<option>Option 4</option>-->
-                <!--<option>Option 5</option>-->
-            <!--</select>-->
-        <!--</div>-->
+        <div class="form-group ">
+            <label class=" uppercase font-weight"> Occupation</label>
+            <select class="form-control input-rounded " ng-model="setProfession.occupation"
+                    ng-options="item.occupation for item in occupation track by item.id_occupation">
+            </select>
+        </div>
 
         <div class="form-group ">
 
