--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -1552,7 +1552,7 @@
                                                 Habits </label>
 
                                             <select class="form-control input-rounded "
-                                                    ng-model="profile.login_user.preferences.eating_habit">
+                                                    ng-model="profile.login_user.preferences.eating_habits">
                                                 <option>Select</option>
                                                 <option value="vegetarian">Vegiterian</option>
                                                 <option value="nonvegetarian">Non Vegiterian</option>
@@ -1565,7 +1565,7 @@
                                                 Habits </label>
 
                                             <select class="form-control input-rounded "
-                                                    ng-model="profile.login_user.preferences.drinking_habit">
+                                                    ng-model="profile.login_user.preferences.drinking_habits">
                                                 <option>Select</option>
                                                 <option value="yes">Yes</option>
                                                 <option value="no">No</option>
@@ -1578,7 +1578,7 @@
                                                 Habits</label>
 
                                             <select class="form-control input-rounded "
-                                                    ng-model="profile.login_user.preferences.smoking_habit">
+                                                    ng-model="profile.login_user.preferences.smoking_habits">
                                                 <option>Select</option>
                                                 <option value="yes">Yes</option>
                                                 <option value="no">No</option>
