--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -45,19 +45,15 @@
                     <label class="col-md-3 control-label">GENDER</label>
 
                     <div class="col-md-8 margin-right-30">
-                        <div class="radio-list">
                             <div class="col-md-4">
 
-                                <label class="radio-inline">
-                                    <input type="radio" name="gender" ng-model="reg.gender" id="male" value="MALE" ng-model="candidate.gender"
-                                           checked> Male </label>
+                                    <input type="radio" name="gender" ng-model="reg.gender" value="MALE" ng-model="candidate.gender"
+                                           checked> Male </input>
                             </div>
                             <div class="col-md-4">
 
-                                <label class="radio-inline ">
-                                    <input type="radio" name="gender"  id="female" value="FEMALE"
-                                           ng-model="reg.gender"> Female</label>
-                            </div>
+                                    <input type="radio" name="gender"   value="FEMALE"
+                                           ng-model="reg.gender"> Female</input>
                         </div>
 
                         <!--<div >-->
