--- a/src/app/main/settings/contactFilters/contactFilters.html
+++ b/src/app/main/settings/contactFilters/contactFilters.html
@@ -30,152 +30,152 @@
 
                                 <div class="col-md-12 ">
                                     <label class="checkbox-inline" class="custon-text">
-                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        <input type="radio"  ng-model="contact.who_can_contact" class="icheck" value="anyone" ng-click="updateContact(contact.who_can_contact)">
                                         Any one.</label>
                                 </div>
 
                                 <div class="col-md-12 ">
                                     <label class="checkbox-inline" class="custon-text">
-                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        <input type="radio" ng-model="contact.who_can_contact" class="icheck" value="preference" ng-click="updateContact(contact.who_can_contact)">
                                         Only members whome meet my criteria.</label>
                                 </div>
 
                             </div>
-                            <hr class="mrgn">
-                            <h4>FILTERS</h4>
+                            <!--<hr class="mrgn">-->
+                            <!--<h4>FILTERS</h4>-->
 
-                            <p>Select your preference and click update.</p>
+                            <!--<p>Select your preference and click update.</p>-->
 
-                            <div class="form-group">
+                            <!--<div class="form-group">-->
 
-                                <div class="col-md-2">
+                                <!--<div class="col-md-2">-->
 
-                                    <label class=" uppercase font-weight "> Age</label>
+                                    <!--<label class=" uppercase font-weight "> Age</label>-->
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>21</option>
-                                        <option>22</option>
-                                        <option>23</option>
-                                        <option>24</option>
-                                        <option>25</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-2">
-                                    <label class=" uppercase font-weight "> &nbsp;</label>
+                                    <!--<select class="form-control input-rounded ">-->
+                                        <!--<option>Select</option>-->
+                                        <!--<option>21</option>-->
+                                        <!--<option>22</option>-->
+                                        <!--<option>23</option>-->
+                                        <!--<option>24</option>-->
+                                        <!--<option>25</option>-->
+                                    <!--</select>-->
+                                <!--</div>-->
+                                <!--<div class="col-md-2">-->
+                                    <!--<label class=" uppercase font-weight "> &nbsp;</label>-->
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>21</option>
-                                        <option>22</option>
-                                        <option>23</option>
-                                        <option>24</option>
-                                        <option>25</option>
-                                    </select>
-                                </div>
-                            </div>
+                                    <!--<select class="form-control input-rounded ">-->
+                                        <!--<option>Select</option>-->
+                                        <!--<option>21</option>-->
+                                        <!--<option>22</option>-->
+                                        <!--<option>23</option>-->
+                                        <!--<option>24</option>-->
+                                        <!--<option>25</option>-->
+                                    <!--</select>-->
+                                <!--</div>-->
+                            <!--</div>-->
 
-                            <div class="form-group">
-                                <label class=" uppercase font-weight col-md-12 "> Marital Status</label>
+                            <!--<div class="form-group">-->
+                                <!--<label class=" uppercase font-weight col-md-12 "> Marital Status</label>-->
 
-                                <div class="col-md-12">
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="unmarriedy">
-                                        Unmarried</label>
+                                <!--<div class="col-md-12">-->
+                                    <!--<label class="checkbox-inline" class="custon-text">-->
+                                        <!--<input type="checkbox" icheckbox_flat-red class="icheck " ng-model="unmarriedy">-->
+                                        <!--Unmarried</label>-->
 
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="widow">
-                                        Widow</label>
+                                    <!--<label class="checkbox-inline" class="custon-text">-->
+                                        <!--<input type="checkbox" icheckbox_flat-red class="icheck " ng-model="widow">-->
+                                        <!--Widow</label>-->
 
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="divorced">
-                                        Divorced</label>
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck "
-                                               ng-model="awaitingDivorce">
-                                        Divorce awaiting</label>
-                                </div>
-                            </div>
+                                    <!--<label class="checkbox-inline" class="custon-text">-->
+                                        <!--<input type="checkbox" icheckbox_flat-red class="icheck " ng-model="divorced">-->
+                                        <!--Divorced</label>-->
+                                    <!--<label class="checkbox-inline" class="custon-text">-->
+                                        <!--<input type="checkbox" icheckbox_flat-red class="icheck "-->
+                                               <!--ng-model="awaitingDivorce">-->
+                                        <!--Divorce awaiting</label>-->
+                                <!--</div>-->
+                            <!--</div>-->
 
-                            <div class="form-group">
+                            <!--<div class="form-group">-->
 
-                                <div class="col-md-6">
-                                    <label class=" uppercase font-weight "> Religion</label>
+                                <!--<div class="col-md-6">-->
+                                    <!--<label class=" uppercase font-weight "> Religion</label>-->
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>Christian</option>
-                                        <option>Hindu</option>
-                                        <option>Muslim</option>
-                                        <option>Others</option>
+                                    <!--<select class="form-control input-rounded ">-->
+                                        <!--<option>Select</option>-->
+                                        <!--<option>Christian</option>-->
+                                        <!--<option>Hindu</option>-->
+                                        <!--<option>Muslim</option>-->
+                                        <!--<option>Others</option>-->
 
-                                    </select>
-                                </div>
+                                    <!--</select>-->
+                                <!--</div>-->
 
-                                <div class="col-md-6">
-                                    <label class=" uppercase font-weight  "> Mother toung</label>
+                                <!--<div class="col-md-6">-->
+                                    <!--<label class=" uppercase font-weight  "> Mother toung</label>-->
 
-                                    <select class="form-control input-rounded ">
-                                        <option>Select Mother Toung</option>
-                                        <option>Malayalam</option>
-                                        <option>Tamil</option>
-                                        <option>Telengu</option>
-                                        <option>Kanada</option>
-                                        <option>English</option>
-                                        <option>Hindi</option>
-                                        <option>Others</option>
-
-
-                                    </select>
-                                </div>
-
-                            </div>
-                            <div class="form-group">
-
-                                <div class="col-md-6">
-                                    <label class=" uppercase font-weight "> Cast</label>
-
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>Cast 1</option>
-                                        <option>Cast 2</option>
-                                        <option>Cast 3</option>
-                                        <option>Cast 4</option>
-
-                                    </select>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <label class=" uppercase font-weight  "> Country</label>
-
-                                    <select class="form-control input-rounded ">
-                                        <option>Select</option>
-                                        <option>India</option>
-                                        <option>UAE</option>
-                                        <option>USA</option>
-                                        <option>Bharin</option>
-                                        <option>Qatar</option>
-                                        <option>Others</option>
+                                    <!--<select class="form-control input-rounded ">-->
+                                        <!--<option>Select Mother Toung</option>-->
+                                        <!--<option>Malayalam</option>-->
+                                        <!--<option>Tamil</option>-->
+                                        <!--<option>Telengu</option>-->
+                                        <!--<option>Kanada</option>-->
+                                        <!--<option>English</option>-->
+                                        <!--<option>Hindi</option>-->
+                                        <!--<option>Others</option>-->
 
 
-                                    </select>
-                                </div>
+                                    <!--</select>-->
+                                <!--</div>-->
 
-                            </div>
-<hr>
-                            <div class="form-group">
+                            <!--</div>-->
+                            <!--<div class="form-group">-->
 
-                                <div class="col-md-12">
+                                <!--<div class="col-md-6">-->
+                                    <!--<label class=" uppercase font-weight "> Cast</label>-->
 
-                                    <div class="pull-right">
-                                        <button type="button" class="uppercase btn red input-rounded"
-                                                ng-click=""> Update
-                                        </button>
+                                    <!--<select class="form-control input-rounded ">-->
+                                        <!--<option>Select</option>-->
+                                        <!--<option>Cast 1</option>-->
+                                        <!--<option>Cast 2</option>-->
+                                        <!--<option>Cast 3</option>-->
+                                        <!--<option>Cast 4</option>-->
 
-                                    </div>
-                                </div>
+                                    <!--</select>-->
+                                <!--</div>-->
 
-                            </div>
+                                <!--<div class="col-md-6">-->
+                                    <!--<label class=" uppercase font-weight  "> Country</label>-->
+
+                                    <!--<select class="form-control input-rounded ">-->
+                                        <!--<option>Select</option>-->
+                                        <!--<option>India</option>-->
+                                        <!--<option>UAE</option>-->
+                                        <!--<option>USA</option>-->
+                                        <!--<option>Bharin</option>-->
+                                        <!--<option>Qatar</option>-->
+                                        <!--<option>Others</option>-->
+
+
+                                    <!--</select>-->
+                                <!--</div>-->
+
+                            <!--</div>-->
+<!--<hr>-->
+                            <!--<div class="form-group">-->
+
+                                <!--<div class="col-md-12">-->
+
+                                    <!--<div class="pull-right">-->
+                                        <!--<button type="button" class="uppercase btn red input-rounded"-->
+                                                <!--ng-click=""> Update-->
+                                        <!--</button>-->
+
+                                    <!--</div>-->
+                                <!--</div>-->
+
+                            <!--</div>-->
 
 
                         </div>
